# arcis

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  benchmarks.py  build.sh  build_local.sh  cluster.py  config.toml  runs.txt
cmake/: FindGUROBI.cmake
libs/: json.hpp
libs/vidal/: LocalSearch.cpp  Params.cpp  Params.h  Population.cpp  Population.h
src/: ArcRoute.cpp  ArcRoute.hpp  CMakeLists.txt  Heuristic.cpp  Heuristic.hpp  Instance.cpp  Instance.hpp  LocalSearch.cpp  LocalSearch.hpp  ModelAux.cpp  ModelAux.hpp  ModelRT.cpp  ModelRT.hpp  Model_RT.cpp  Model_RT.hpp  Model_mRT.cpp  Preprocessing.cpp  Preprocessing.hpp  Result.cpp  Result.hpp  RouteSolver.cpp  RouteSolver.hpp  best.cpp  best.hpp  bounds.cpp  bounds.hpp  cli.cpp  cli.hpp  local_search.cpp  local_search.hpp  main.cpp  main2.cpp  mdarray.hpp  solver_test.cpp  solver_test.hpp  timer.hpp  utils.hpp
